Finally had the courage to rename EDRedBlackTree to EDSortedArray. This describes what that class does, rather than how it is implemented.

--- a/EDCommonTOC.html
+++ b/EDCommonTOC.html
@@ -68,7 +68,7 @@
 <td width="50%" valign="top">
 	<a href="Classes/EDObjectReference.html"> EDObjectReference </a><br>
 	<a href="Classes/EDRange.html"> EDRange </a><br>
-	<a href="Classes/EDRedBlackTree.html"> EDRedBlackTree </a><br>
+	<a href="Classes/EDSortedArray.html"> EDSortedArray </a><br>
 	<a href="Classes/EDSparseClusterArray.html"> EDSparseClusterArray </a><br>
 	<a href="Classes/EDStack.html"> EDStack </a><br>
 </tr>
