Added a new test subproject for unit testing using Sente's SenTestingKit. If you don't have it no problem, it is only used when you build the 'Tests' target.

--- a/EDCommonTOC.html
+++ b/EDCommonTOC.html
@@ -32,22 +32,23 @@
 	<a href="Classes/NSMutableAttributedString+EDExtensions.html"> NSMutableAttributedString Extensions</a><br>
 
 	<a href="Classes/NSMutableDictionary+EDExtensions.html"> NSMutableDictionary Extensions</a><br>
-
-</td>
-<td width="50%" valign="top">
 	<a href="Classes/NSMutableString+EDExtensions.html"> NSMutableString Extensions</a><br>
 	<a href="Classes/NSObject+EDExtensions.html">NSObject Extensions</a><br>
+</td>
+
+<td width="50%" valign="top">
 	<a href="Classes/NSProcessInfo+EDExtensions.html">NSProcessInfo Extensions</a><br>
 	<a href="Classes/NSSet+EDExtensions.html">NSSet Extensions</a><br>
 	<a href="Classes/NSScanner+EDExtensions.html">NSScanner Extensions</a><br>
 
 	<a href="Classes/NSString+EDExtensions.html">NSString Extensions</a><br>
-   	<a href="Classes/EDIPSocket.html"> EDIPSocket </a><br>
-   	<a href="Classes/EDSocket.html"> EDSocket </a><br>
-   	<a href="Classes/EDStream.html"> EDStream </a><br>
-   	<a href="Classes/EDTCPSocket.html"> EDTCPSocket </a><br>
+   	<a href="Classes/EDIPSocket.html">EDIPSocket</a><br>
+   	<a href="Classes/EDSocket.html">EDSocket</a><br>
+   	<a href="Classes/EDStream.html">EDStream</a><br>
+   	<a href="Classes/EDTCPSocket.html">EDTCPSocket</a><br>
 
-   	<a href="Classes/EDUDPSocket.html"> EDUDPSocket </a><br>
+   	<a href="Classes/EDUDPSocket.html">EDUDPSocket</a><br>
+   	<a href="Classes/EDTextWriter.html">EDTextWriter</a><br>
 
 </tr>
 </table>
@@ -141,6 +142,7 @@
 </td>
 <td width="50%" valign="top">
 	<a href="Classes/EDStringScanner.html"> EDStringScanner </a><br>
+	<a href="Classes/EDStringWriter.html"> EDStringWriter </a><br>
 </tr>
 </table>
 </blockquote>
