Fixed copyright notice.

--- a/EDCommonIntro.html
+++ b/EDCommonIntro.html
@@ -69,6 +69,6 @@
 <p>Finally, the attributed string category in the AppKit subproject contains a method that finds URLs and applies the "usual" formatting to them; the "URLifier."</p>
 
 <P><HR>
-Copyright &copy; 2002 by Erik Doernenburg.  All Rights Reserved.  
+Copyright &copy; 2002-2007 by Mulle Kybernetik. All Rights Reserved.  
 <P>
 </BODY></HTML>
