--- a/EDCommonTOC.html
+++ b/EDCommonTOC.html
@@ -176,6 +176,7 @@
 
 
 <P><HR>
-Framework Version 33. Copyright &copy; 2003-2007 by Erik Doernenburg.  All Rights Reserved.  
+Framework Version 33. Copyright &copy; 2002-2007 by Mulle Kybernetik. All Rights Reserved.  
+  
 <P>
 </BODY></HTML>
